# computer_club

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  club.cpp  club.h  main.cpp  outputAdapter.cpp  outputAdapter.h  tableState.cpp  tableState.h
tests/: CMakeLists.txt  test_main.cpp
tests/cases/: input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
